# pymelcloud

./: pyproject.toml
pymelcloud/: __init__.py  client.py
